# kact

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  kact.toml
src/: config.rs  core.rs  error.rs  lib.rs  main.rs  platform.rs  runtime.rs
src/core/: motion.rs  state.rs  types.rs
src/platform/: linux.rs  macos.rs
src/runtime/: engine.rs  watcher.rs
